# compressor-ia-context

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: architecture.mdc  commands.mdc  rust-style.mdc  use-cx.mdc
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  runner.rs
src/compress/: cargo.rs  docker.rs  generic.rs  git.rs  grep.rs  mod.rs  python.rs  truncate.rs
src/tools/: cargo.rs  docker.rs  fs.rs  generic.rs  git.rs  grep.rs  mod.rs  python.rs
